// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentReportAssessmentListTest render: fail 1`] = `
<div>
  <div
    className="assessment-details"
  >
    <h3
      className="assessment-header"
    >
      Assessment1
      <OutcomeChip
        count={2}
        outcomeType="fail"
      />
    </h3>
    <AssessmentReportStepList
      deps={
        Object {
          "outcomeTypeSemanticsFromTestStatus": Object {
            "stub": "outcomeTypeSemanticsFromTestStatus",
          },
        }
      }
      status={2}
      steps={
        Array [
          Object {
            "defaultMessageComponent": null,
            "header": Object {
              "description": null,
              "displayName": "Step2A",
              "guidanceLinks": Array [],
              "requirementType": "assisted",
            },
            "instances": Array [
              Object {
                "props": Array [
                  Object {
                    "key": "Path",
                    "value": "target1",
                  },
                  Object {
                    "key": "Snippet",
                    "value": "someHtml",
                  },
                ],
              },
            ],
            "key": "step2a",
            "showPassingInstances": false,
          },
          Object {
            "defaultMessageComponent": null,
            "header": Object {
              "description": null,
              "displayName": "Step4A",
              "guidanceLinks": Array [],
              "requirementType": "manual",
            },
            "instances": Array [
              Object {
                "props": Array [
                  Object {
                    "key": "Comment",
                    "value": "comment",
                  },
                ],
              },
            ],
            "key": "step4a",
            "showPassingInstances": false,
          },
        ]
      }
    />
  </div>
  <div
    className="assessment-details"
  >
    <h3
      className="assessment-header"
    >
      Assessment2
      <OutcomeChip
        count={1}
        outcomeType="fail"
      />
    </h3>
    <AssessmentReportStepList
      deps={
        Object {
          "outcomeTypeSemanticsFromTestStatus": Object {
            "stub": "outcomeTypeSemanticsFromTestStatus",
          },
        }
      }
      status={2}
      steps={
        Array [
          Object {
            "defaultMessageComponent": null,
            "header": Object {
              "description": null,
              "displayName": "Step2B",
              "guidanceLinks": Array [],
              "requirementType": "manual",
            },
            "instances": Array [],
            "key": "step2b",
            "showPassingInstances": true,
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`AssessmentReportAssessmentListTest render: incomplete 1`] = `
<div>
  <div
    className="assessment-details"
  >
    <h3
      className="assessment-header"
    >
      Assessment1
      <OutcomeChip
        count={1}
        outcomeType="incomplete"
      />
    </h3>
    <AssessmentReportStepList
      deps={
        Object {
          "outcomeTypeSemanticsFromTestStatus": Object {
            "stub": "outcomeTypeSemanticsFromTestStatus",
          },
        }
      }
      status={1}
      steps={
        Array [
          Object {
            "defaultMessageComponent": null,
            "header": Object {
              "description": null,
              "displayName": "Step3A",
              "guidanceLinks": Array [],
              "requirementType": "assisted",
            },
            "instances": Array [
              Object {
                "props": Array [
                  Object {
                    "key": "Path",
                    "value": "target2",
                  },
                  Object {
                    "key": "Snippet",
                    "value": "someHtml",
                  },
                ],
              },
            ],
            "key": "step3a",
            "showPassingInstances": false,
          },
        ]
      }
    />
  </div>
  <div
    className="assessment-details"
  >
    <h3
      className="assessment-header"
    >
      Assessment2
      <OutcomeChip
        count={1}
        outcomeType="incomplete"
      />
    </h3>
    <AssessmentReportStepList
      deps={
        Object {
          "outcomeTypeSemanticsFromTestStatus": Object {
            "stub": "outcomeTypeSemanticsFromTestStatus",
          },
        }
      }
      status={1}
      steps={
        Array [
          Object {
            "defaultMessageComponent": null,
            "header": Object {
              "description": null,
              "displayName": "Step1B",
              "guidanceLinks": Array [],
              "requirementType": "assisted",
            },
            "instances": Array [],
            "key": "step1b",
            "showPassingInstances": true,
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`AssessmentReportAssessmentListTest render: pass 1`] = `
<div>
  <div
    className="assessment-details"
  >
    <h3
      className="assessment-header"
    >
      Assessment1
      <OutcomeChip
        count={1}
        outcomeType="pass"
      />
    </h3>
    <AssessmentReportStepList
      deps={
        Object {
          "outcomeTypeSemanticsFromTestStatus": Object {
            "stub": "outcomeTypeSemanticsFromTestStatus",
          },
        }
      }
      status={0}
      steps={
        Array [
          Object {
            "defaultMessageComponent": null,
            "header": Object {
              "description": null,
              "displayName": "Step1A",
              "guidanceLinks": Array [
                Object {
                  "href": "link1A",
                  "text": "link1A",
                },
              ],
              "requirementType": "assisted",
            },
            "instances": Array [
              Object {
                "props": Array [
                  Object {
                    "key": "Path",
                    "value": "target1",
                  },
                  Object {
                    "key": "Snippet",
                    "value": "someHtml",
                  },
                ],
              },
            ],
            "key": "step1a",
            "showPassingInstances": false,
          },
        ]
      }
    />
  </div>
</div>
`;
